--- a/index.html
+++ b/index.html
@@ -1470,7 +1470,7 @@ margin-left: 0 !important;
                                 <li><span><i class="glyphicon glyphicon-user"></i> Prof. Rozenn
 Dahyot</span></li>
                                          <li><span><i class="glyphicon glyphicon-calendar"></i> Updated:
-10 December, 2023</span></li>
+12 December, 2023</span></li>
                   </ul>     
       </div>
       <div class="book-body fixed">
@@ -1658,7 +1658,8 @@ Open Data, Big Spatial Data, OpenStreetMap,</td>
 <tr class="even">
 <td align="left"><a href="https://www.maynoothuniversity.ie/people/aidan-mooney" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
 Aidan Mooney</td>
-<td align="left">Computer Science,</td>
+<td align="left">Computer Science Education, Large Class Teaching,
+Eye-tracking, Automated Feedback and Assessment,</td>
 </tr>
 <tr class="odd">
 <td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/thomas-naughton" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
