--- a/MUCSprojects.html
+++ b/MUCSprojects.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="icon" type="image/x-icon"
+	href="https://www.maynoothuniversity.ie/sites/default/files/favicon.ico">
 <meta charset="utf-8" />
 <style>body{background-color:white;}</style>
 <script>(function() {
