remove whitespace between lines of contact address

--- a/index.html
+++ b/index.html
@@ -1746,13 +1746,12 @@ Research Council postdoctoral opportunities</a></li>
 </div>
 <div id="contact" class="section level1">
 <h1>Contact</h1>
-<p>Department of Computer Science</p>
-<p>Eolas Building</p>
-<p>North Campus</p>
-<p>Maynooth University</p>
-<p>Maynooth, Co Kildare, Ireland</p>
-<p>Email:
-<a href="mailto:computerscience.department@mu.ie">computerscience.department@mu.ie</a></p>
+<p>Department of Computer Science<br>
+Eolas Building<br>
+North Campus<br>
+Maynooth University<br>
+Maynooth, Co Kildare, Ireland<br>
+Email: <a href="mailto:computerscience.department@mu.ie">computerscience.department@mu.ie</a></p>
 </div>
 
    
