Bing Chat fills in research expertise of: John Keating

--- a/index.html
+++ b/index.html
@@ -1587,7 +1587,7 @@ spectroscopy, holographic microscopy,</td>
 </tr>
 <tr class="odd">
 <td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/john-keating" target="_blank">🏛</a> John Keating</td>
-<td align="left"></td>
+<td align="left">Educational technology; interaction design; collaborative learning; signal processing; neural networks</td>
 </tr>
 <tr class="even">
 <td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/john-kelleher" target="_blank">🏛</a> John D. Kelleher</td>
