Bing Chat fills in research expertise of: Taina M. Lehtimäki

--- a/index.html
+++ b/index.html
@@ -1601,7 +1601,7 @@ Lifelogging, eHealth,</td>
 </tr>
 <tr class="even">
 <td align="left"><a href="https://www.maynoothuniversity.ie/people/taina-lehtimaki" target="_blank">🏛</a> Taina M. Lehtimäki</td>
-<td align="left"></td>
+<td align="left">Tomography; holography; computer vision; 3D displays; visual perception</td>
 </tr>
 <tr class="odd">
 <td align="left"><a href="https://www.maynoothuniversity.ie/people/thomas-lysaght" target="_blank">🏛</a> Thomas Lysaght</td>
