Bing Chat fills in research expertise of: Charles Markham

--- a/index.html
+++ b/index.html
@@ -1615,7 +1615,7 @@ optimization, algorithmic information theory, surprise,</td>
 </tr>
 <tr class="odd">
 <td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/charles-markham" target="_blank">🏛</a> Charles Markham</td>
-<td align="left">Computer Science,</td>
+<td align="left">Tomography; novel imaging systems; optical BCI; wearable biofeedback; measuring driver behaviour; modelling disease and invasive species</td>
 </tr>
 <tr class="even">
 <td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/tim-mccarthy" target="_blank">🏛</a> Tim McCarthy</td>
