Bing Chat fills in research expertise of: Mark Noone

--- a/index.html
+++ b/index.html
@@ -1647,9 +1647,8 @@ holography, parallel computing,</td>
 </tr>
 <tr class="even">
 <td align="left"><a href="https://www.maynoothuniversity.ie/people/mark-noone" target="_blank">🏛</a> Mark Noone</td>
-<td align="left">Computer Science Education, Programming, Visual
-Programming Languages, Textual Programming Languages, Hybrid Programming
-Languag,</td>
+<td align="left">Computer Science Education, Programming, Visual/Textual/Hybrid Programming
+Languages</td>
 </tr>
 <tr class="odd">
 <td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/diarmuid-odonoghue" target="_blank">🏛</a> Diarmuid P. O’Donoghue</td>
