--- a/index.html
+++ b/index.html
@@ -1470,7 +1470,7 @@ margin-left: 0 !important;
                                 <li><span><i class="glyphicon glyphicon-user"></i> Prof. Rozenn
 Dahyot</span></li>
                                          <li><span><i class="glyphicon glyphicon-calendar"></i> Updated:
-12 December, 2023</span></li>
+18 December, 2023</span></li>
                   </ul>     
       </div>
       <div class="book-body fixed">
@@ -1532,12 +1532,13 @@ projects</a></li>
 Google Scholar Webpage</a>.</p>
 <p>Institutional individual webpages of
 <a href="https://www.maynoothuniversity.ie/computer-science/our-people" target="_blank">academic
-staff members</a> are linked using the icon 🏛 for each MU CS
+staff members</a> are linked using the icon
+<i class="fa fa-university" aria-hidden="true"></i> for each MU CS
 member of staff in the table below.</p>
 <table>
 <colgroup>
-<col style="width:1%; white-space: nowrap" />
-<col />
+<col width="60%" />
+<col width="39%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -1547,138 +1548,167 @@ member of staff in the table below.</p>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/ralf-bierig" target="_blank">🏛</a> Ralf Bierig</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/ralf-bierig" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Ralf Bierig</td>
 <td align="left">Virtual Reality, Human-Computer Interaction,
 Information Behaviour, Interactive Information Retrieval,</td>
 </tr>
 <tr class="even">
-<td align="left"><a href="https://www.maynoothuniversity.ie/computer-science/our-people/stephen-brown" target="_blank">🏛</a> Stephen Brown</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/computer-science/our-people/stephen-brown" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Stephen Brown</td>
 <td align="left">Embedded networking, wireless sensor and actuator
 networking,</td>
 </tr>
 <tr class="odd">
-<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/kevin-casey" target="_blank">🏛</a> Kevin Casey</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/kevin-casey" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Kevin Casey</td>
 <td align="left">Virtual Machines, Compilers, Programming Languages, Web
 Development, Cloud Computing,</td>
 </tr>
 <tr class="even">
-<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/natalie-culligan" target="_blank">🏛</a> Natalie Culligan</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/natalie-culligan" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Natalie Culligan</td>
 <td align="left">Computer Science, Education,</td>
 </tr>
 <tr class="odd">
-<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/rozenn-dahyot" target="_blank">🏛</a> Rozenn Dahyot</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/rozenn-dahyot" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Rozenn Dahyot</td>
 <td align="left">pattern recognition, signal processing, machine
 learning, computer vision, computer graphics,</td>
 </tr>
 <tr class="even">
-<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/behnam-faghih" target="_blank">🏛</a> Behnam Faghih</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/behnam-faghih" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Behnam Faghih</td>
 <td align="left">Music Technology, Audio Signal Processing, Music
 E-Learning, E-Democracy, E-Government,</td>
 </tr>
 <tr class="odd">
-<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/edgar-galvan" target="_blank">🏛</a> Edgar Galvan</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/edgar-galvan" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Edgar Galvan</td>
 <td align="left">Machine Learning, Evolutionary Algorithms, Deep Neural
 Networks,</td>
 </tr>
 <tr class="even">
-<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/bryan-hennelly" target="_blank">🏛</a> Bryan Hennelly</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/bryan-hennelly" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Bryan Hennelly</td>
 <td align="left">Microscopy, Image Processing, Optics, Raman
 spectroscopy, holographic microscopy,</td>
 </tr>
 <tr class="odd">
-<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/john-keating" target="_blank">🏛</a> John Keating</td>
-<td align="left">Educational technology; interaction design; collaborative learning; signal processing; neural networks</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/john-keating" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+John Keating</td>
+<td align="left"></td>
 </tr>
 <tr class="even">
-<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/john-kelleher" target="_blank">🏛</a> John D. Kelleher</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/john-kelleher" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+John D. Kelleher</td>
 <td align="left">Machine Learning, Natural Language Processing,
 Precision Medicine, Artificial Intelligence, Data Science,</td>
 </tr>
 <tr class="odd">
-<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/liadh-kelly" target="_blank">🏛</a> Liadh Kelly</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/liadh-kelly" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Liadh Kelly</td>
 <td align="left">Information Retrieval, Ubiquitous Computing,
 Lifelogging, eHealth,</td>
 </tr>
 <tr class="even">
-<td align="left"><a href="https://www.maynoothuniversity.ie/people/taina-lehtimaki" target="_blank">🏛</a> Taina M. Lehtimäki</td>
-<td align="left">Tomography; holography; computer vision; 3D displays; visual perception</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/people/taina-lehtimaki" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Taina M. Lehtimäki</td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
-<td align="left"><a href="https://www.maynoothuniversity.ie/people/thomas-lysaght" target="_blank">🏛</a> Thomas Lysaght</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/people/thomas-lysaght" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Thomas Lysaght</td>
 <td align="left">Music Signal Processing, Wigner Distribution, Music
 Technology,</td>
 </tr>
 <tr class="even">
-<td align="left"><a href="https://www.maynoothuniversity.ie/people/phil-maguire" target="_blank">🏛</a> Phil Maguire</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/people/phil-maguire" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Phil Maguire</td>
 <td align="left">metrology, blockchain economics, portfolio
 optimization, algorithmic information theory, surprise,</td>
 </tr>
 <tr class="odd">
-<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/charles-markham" target="_blank">🏛</a> Charles Markham</td>
-<td align="left">Tomography; novel imaging systems; optical BCI; wearable biofeedback; measuring driver behaviour; modelling disease and invasive species</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/charles-markham" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Charles Markham</td>
+<td align="left">Computer Science,</td>
 </tr>
 <tr class="even">
-<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/tim-mccarthy" target="_blank">🏛</a> Tim McCarthy</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/tim-mccarthy" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Tim McCarthy</td>
 <td align="left">Geospatial Science &amp; Technology,</td>
 </tr>
 <tr class="odd">
-<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/john-mcdonald" target="_blank">🏛</a> John McDonald</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/john-mcdonald" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+John McDonald</td>
 <td align="left">Computer Vision, Visual SLAM, Robotics, Augmented
 Reality, Pattern Recognition,</td>
 </tr>
 <tr class="even">
-<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/ralf-bierig" target="_blank">🏛</a> Rosemary Monahan</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/ralf-bierig" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Rosemary Monahan</td>
 <td align="left">Formal Methods, Verification, Specification,</td>
 </tr>
 <tr class="odd">
-<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/rosemary-monahan" target="_blank">🏛</a> Peter Mooney</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/rosemary-monahan" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Dr. Peter Mooney</td>
 <td align="left">Volunteered Geographic Information, Citizen Science,
 Open Data, Big Spatial Data, OpenStreetMap,</td>
 </tr>
 <tr class="even">
-<td align="left"><a href="https://www.maynoothuniversity.ie/people/aidan-mooney" target="_blank">🏛</a> Aidan Mooney</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/people/aidan-mooney" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Aidan Mooney</td>
 <td align="left">Computer Science Education, Large Class Teaching,
 Eye-tracking, Automated Feedback and Assessment,</td>
 </tr>
 <tr class="odd">
-<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/thomas-naughton" target="_blank">🏛</a> Thomas J. Naughton</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/thomas-naughton" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Thomas J. Naughton</td>
 <td align="left">Optical image processing, optical computing, digital
 holography, parallel computing,</td>
 </tr>
 <tr class="even">
-<td align="left"><a href="https://www.maynoothuniversity.ie/people/mark-noone" target="_blank">🏛</a> Mark Noone</td>
-<td align="left">Computer Science Education, Programming, Visual/Textual/Hybrid Programming
-Languages</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/people/mark-noone" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Mark Noone</td>
+<td align="left">Computer Science Education, Programming, Visual
+Programming Languages, Textual Programming Languages, Hybrid Programming
+Languag,</td>
 </tr>
 <tr class="odd">
-<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/diarmuid-odonoghue" target="_blank">🏛</a> Diarmuid P. O’Donoghue</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/diarmuid-odonoghue" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Diarmuid P. O’Donoghue</td>
 <td align="left">Computational Intelligence, Evolutionary Computing,
 Analogical Reasoning, Computational Creativity,</td>
 </tr>
 <tr class="even">
-<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/barak-pearlmutter" target="_blank">🏛</a> Barak A. Pearlmutter</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/barak-pearlmutter" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Barak A. Pearlmutter</td>
 <td align="left">Computational Neuroscience, Theoretical Neurobiology,
 Machine Learning, Recurrent Neural Networks, Automatic
 Differentiation,</td>
 </tr>
 <tr class="odd">
-<td align="left"><a href="https://www.maynoothuniversity.ie/people/ronan-reilly" target="_blank">🏛</a> Ronan G. Reilly</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/people/ronan-reilly" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Ronan G. Reilly</td>
 <td align="left">reading, artificial intelligence, computational
 linguistics, neuroscience,</td>
 </tr>
 <tr class="even">
-<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/damien-woods" target="_blank">🏛</a> Damien Woods</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/damien-woods" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Damien Woods</td>
 <td align="left">molecular programming, models of computation, optical
 computing, small universal Turing machines, algorithms complexity
 theory,</td>
 </tr>
 <tr class="odd">
-<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/hao-wu" target="_blank">🏛</a> Hao Wu 吴昊</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/hao-wu" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Hao Wu 吴昊</td>
 <td align="left">Software Engineering, Formal Methods, SAT/SMT,
 Programming Languages, Model-Driven Engineering,</td>
 </tr>
 <tr class="even">
-<td align="left"><a href="https://www.maynoothuniversity.ie/people/joseph-timoney" target="_blank">🏛</a> Joseph Timoney</td>
+<td align="left"><a href="https://www.maynoothuniversity.ie/people/joseph-timoney" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
+Joseph Timoney</td>
 <td align="left">Audio Signal Processing, Music analysis, Software
 Testing,</td>
 </tr>
@@ -1688,17 +1718,17 @@ Testing,</td>
 <div id="research-groups" class="section level1">
 <h1>Research Groups</h1>
 <ul>
-<li>Computer Vision Group</li>
-<li><a href="http://nic.cs.nuim.ie" target="_blank">Naturally
-Inspired Computation Research Group</a></li>
-<li><a href="https://dna.hamilton.ie/" target="_blank">TAPDANCE:
-Theory And Practice of DNA Computing Engines</a></li>
-<li><a href="https://www.cs.nuim.ie/research/cser/" target="_blank">Computer
-Science Education Research Group</a></li>
-<li><a href="https://www.cs.nuim.ie/research/pop/index.html" target="_blank">Principles
-of Programming Research Group</a></li>
-<li><a href="http://musictech.cs.nuim.ie/" target="_blank">Music
-Technology research group</a></li>
+<li><p>Computer Vision Group</p></li>
+<li><p><a href="http://nic.cs.nuim.ie" target="_blank">Naturally
+Inspired Computation Research Group</a></p></li>
+<li><p><a href="https://dna.hamilton.ie/" target="_blank">TAPDANCE:
+Theory And Practice of DNA Computing Engines</a></p></li>
+<li><p><a href="https://www.cs.nuim.ie/research/cser/" target="_blank">Computer
+Science Education Research Group</a></p></li>
+<li><p><a href="https://www.cs.nuim.ie/research/pop/index.html" target="_blank">Principles
+of Programming Research Group</a></p></li>
+<li><p><a href="http://musictech.cs.nuim.ie/" target="_blank">Music
+Technology research group</a></p></li>
 </ul>
 </div>
 <div id="open-positions" class="section level1">
@@ -1706,6 +1736,8 @@ Technology research group</a></li>
 <p>Below examples of (competitive) funding available for prospective
 research students and research fellows:</p>
 <ul>
+<li><a href="https://dna.hamilton.ie/join.html">PhD, postdoc and
+internships on theory and practice of DNA computing</a></li>
 <li><a href="https://research.ie/funding/goipg/">Government of Ireland
 Postgraduate Scholarship Programme</a></li>
 <li><a href="https://www.maynoothuniversity.ie/graduate-studies/john-pat-hume-doctoral-awards">Maynooth
@@ -1716,12 +1748,13 @@ Research Council postdoctoral opportunities</a></li>
 </div>
 <div id="contact" class="section level1">
 <h1>Contact</h1>
-<p>Department of Computer Science<br>
-Eolas Building<br>
-North Campus<br>
-Maynooth University<br>
-Maynooth, Co Kildare, Ireland<br>
-Email: <a href="mailto:computerscience.department@mu.ie">computerscience.department@mu.ie</a></p>
+<p>Department of Computer Science</p>
+<p>Eolas Building</p>
+<p>North Campus</p>
+<p>Maynooth University</p>
+<p>Maynooth, Co Kildare, Ireland</p>
+<p>Email:
+<a href="mailto:computerscience.department@mu.ie">computerscience.department@mu.ie</a></p>
 </div>
 
    
