--- a/index.html
+++ b/index.html
@@ -1718,18 +1718,18 @@ Testing,</td>
 <div id="research-groups" class="section level1">
 <h1>Research Groups</h1>
 <ul>
-<li><p>Computer Vision Group</p></li>
 <li><p><a href="http://nic.cs.nuim.ie" target="_blank">Naturally
 Inspired Computation Research Group</a></p></li>
 <li><p><a href="https://dna.hamilton.ie/" target="_blank">TAPDANCE:
 Theory And Practice of DNA Computing Engines</a></p></li>
-<li><p><a href="https://www.cs.nuim.ie/research/cser/" target="_blank">Computer
-Science Education Research Group</a></p></li>
 <li><p><a href="https://www.cs.nuim.ie/research/pop/index.html" target="_blank">Principles
 of Programming Research Group</a></p></li>
-<li><p><a href="http://musictech.cs.nuim.ie/" target="_blank">Music
-Technology research group</a></p></li>
 </ul>
+<!-- 
+-  Computer Vision Group
+- <a href="https://www.cs.nuim.ie/research/cser/" target="_blank">Computer Science Education Research Group</a>
+- <a href="http://musictech.cs.nuim.ie/" target="_blank">Music Technology research group</a>
+-->
 </div>
 <div id="open-positions" class="section level1">
 <h1>Open positions</h1>
