--- a/index.html
+++ b/index.html
@@ -1457,9 +1457,11 @@ margin-left: 0 !important;
         <nav role="navigation" id="toc">
           <ul>
           <li><a href="#welcome" id="toc-welcome">Welcome</a></li>
-          <li><a href="#academic-staff-expertise" id="toc-academic-staff-expertise">Academic Staff
-          Expertise</a></li>
+          <li><a href="#academic-staff-expertise" id="toc-academic-staff-expertise">Academic Staff Expertise</a>
+          <ul>
           <li><a href="#research-groups" id="toc-research-groups">Research Groups</a></li>
+          <li><a href="#research-support" id="toc-research-support">Research Support</a></li>
+          </ul></li>
           <li><a href="#open-positions" id="toc-open-positions">Open
           positions</a></li>
           <li><a href="#contact" id="toc-contact">Contact</a></li>
@@ -1470,7 +1472,7 @@ margin-left: 0 !important;
                                 <li><span><i class="glyphicon glyphicon-user"></i> Prof. Rozenn
 Dahyot</span></li>
                                          <li><span><i class="glyphicon glyphicon-calendar"></i> Updated:
-18 December, 2023</span></li>
+23 December, 2023</span></li>
                   </ul>     
       </div>
       <div class="book-body fixed">
@@ -1508,28 +1510,28 @@ Science in Ireland in 2023</strong> according to
 <ul>
 <li>Artificial Intelligence (inc. machine learning, Deep Neural
 Networks)</li>
-<li>Algorithms and Optimization</li>
-<li>Software Verification</li>
+<li>Software Verification and Theoretical Computer Science</li>
 <li>DNA Computing</li>
-<li>Theoretical Computer Science</li>
-<li>Computer Science Education</li>
+<li>Algorithms and Optimization</li>
 <li>Applications: Computer Vision, Robotics, GeoScience, Augmented
-Reality, Multimedia processing, etc.</li>
+Reality, Multimedia processing, Computer Science Education.</li>
 </ul>
 <p>Our department has been successful in getting <strong>research
 funding</strong> over the years for instance from Science Foundation
 Ireland, Enterprise Ireland, the Irish Research Council, and the
-European Union (e.g. ERC):</p>
+European Union.</p>
 <ul>
-<li>see <a href="MUCSprojects.html" target="_blank">our research
-projects</a></li>
+<li><p>This
+<strong><a href="MUCSprojects.html" target="_blank">timeline</a></strong>
+shows our on-going research projects and collaborations with national
+research centres.</p></li>
+<li><p>This
+<strong><a href="https://scholar.google.com/citations?hl=en&amp;user=Fax186kAAAAJ&amp;view_op=list_works&amp;sortby=pubdate" target="_blank">departmental
+Google Scholar Webpage</a></strong> lists our publications.</p></li>
 </ul>
 </div>
 <div id="academic-staff-expertise" class="section level1">
 <h1>Academic Staff Expertise</h1>
-<p>Our publications are available on our
-<a href="https://scholar.google.com/citations?hl=en&amp;user=Fax186kAAAAJ&amp;view_op=list_works&amp;sortby=pubdate" target="_blank">Departmental
-Google Scholar Webpage</a>.</p>
 <p>Institutional individual webpages of
 <a href="https://www.maynoothuniversity.ie/computer-science/our-people" target="_blank">academic
 staff members</a> are linked using the icon
@@ -1714,22 +1716,45 @@ Testing,</td>
 </tr>
 </tbody>
 </table>
-</div>
-<div id="research-groups" class="section level1">
-<h1>Research Groups</h1>
+<div id="research-groups" class="section level2">
+<h2>Research Groups</h2>
+<p>Depending on ongoing funded projects and research interests, several
+academics have formed research groups e.g.:</p>
 <ul>
-<li><p><a href="http://nic.cs.nuim.ie" target="_blank">Naturally
-Inspired Computation Research Group</a></p></li>
 <li><p><a href="https://dna.hamilton.ie/" target="_blank">TAPDANCE:
 Theory And Practice of DNA Computing Engines</a></p></li>
 <li><p><a href="https://www.cs.nuim.ie/research/pop/index.html" target="_blank">Principles
 of Programming Research Group</a></p></li>
+<li><p><a href="http://nic.cs.nuim.ie" target="_blank">Naturally
+Inspired Computation Research Group</a></p></li>
 </ul>
 <!-- 
 -  Computer Vision Group
 - <a href="https://www.cs.nuim.ie/research/cser/" target="_blank">Computer Science Education Research Group</a>
 - <a href="http://musictech.cs.nuim.ie/" target="_blank">Music Technology research group</a>
 -->
+</div>
+<div id="research-support" class="section level2">
+<h2>Research Support</h2>
+<p>Research staff and students in our department can rely on the
+technical support from
+<a href="https://www.maynoothuniversity.ie/computer-science/our-people/james-cotter" target="_blank">James
+Cotter</a>,
+<a href="https://www.maynoothuniversity.ie/computer-science/our-people/michael-monaghan" target="_blank">Michael
+Monaghan</a>,
+<a href="https://www.maynoothuniversity.ie/computer-science/our-people/vanush-paturyan" target="_blank">Dr
+Vanush Paturyan</a> (e.g. GPU cluster support) and
+<a href="https://www.maynoothuniversity.ie/computer-science/our-people/ranju-upadhyay" target="_blank">Ranju
+Upadhyay</a>.</p>
+<p>Likewise the research activtities in the department are well
+supported by its administrative staff
+<a href="https://www.maynoothuniversity.ie/people/phil-dully" target="_blank">Phil
+Dully</a>,
+<a href="https://www.maynoothuniversity.ie/people/des-noonan" target="_blank">Des
+Noonan</a> and
+<a href="https://www.maynoothuniversity.ie/people/khalila-ismail" target="_blank">Khalila
+Ismail</a>.</p>
+</div>
 </div>
 <div id="open-positions" class="section level1">
 <h1>Open positions</h1>
