--- a/index.html
+++ b/index.html
@@ -1472,7 +1472,7 @@ margin-left: 0 !important;
                                 <li><span><i class="glyphicon glyphicon-user"></i> Prof. Rozenn
 Dahyot</span></li>
                                          <li><span><i class="glyphicon glyphicon-calendar"></i> Updated:
-23 December, 2023</span></li>
+09 January, 2024</span></li>
                   </ul>     
       </div>
       <div class="book-body fixed">
@@ -1605,7 +1605,7 @@ John Keating</td>
 <td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/john-kelleher" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
 John D. Kelleher</td>
 <td align="left">Machine Learning, Natural Language Processing,
-Precision Medicine, Artificial Intelligence, Data Science,</td>
+Precision Medicine, Artificial Intelligence, Data,</td>
 </tr>
 <tr class="odd">
 <td align="left"><a href="https://www.maynoothuniversity.ie/faculty-science-engineering/our-people/liadh-kelly" target="_blank"><i class="fa fa-university" aria-hidden="true"></i></a>
@@ -1727,6 +1727,8 @@ Theory And Practice of DNA Computing Engines</a></p></li>
 of Programming Research Group</a></p></li>
 <li><p><a href="http://nic.cs.nuim.ie" target="_blank">Naturally
 Inspired Computation Research Group</a></p></li>
+<li><p><a href="https://pact.cs.nuim.ie/" target="_blank">PACT:
+Programming, Algorithms and Computational Thinking</a></p></li>
 </ul>
 <!-- 
 -  Computer Vision Group
