--- a/index.html
+++ b/index.html
@@ -1748,8 +1748,8 @@ Monaghan</a>,
 Vanush Paturyan</a> (e.g. GPU cluster support) and
 <a href="https://www.maynoothuniversity.ie/computer-science/our-people/ranju-upadhyay" target="_blank">Ranju
 Upadhyay</a>.</p>
-<p>Likewise the research activtities in the department are well
-supported by its administrative staff
+<p>Likewise the research activities in the department are well supported
+by its administrative staff
 <a href="https://www.maynoothuniversity.ie/people/phil-dully" target="_blank">Phil
 Dully</a>,
 <a href="https://www.maynoothuniversity.ie/people/des-noonan" target="_blank">Des
