--- a/index.html
+++ b/index.html
@@ -1472,7 +1472,7 @@ margin-left: 0 !important;
                                 <li><span><i class="glyphicon glyphicon-user"></i> Prof. Rozenn
 Dahyot</span></li>
                                          <li><span><i class="glyphicon glyphicon-calendar"></i> Updated:
-11 January, 2024</span></li>
+21 February, 2024</span></li>
                   </ul>     
       </div>
       <div class="book-body fixed">
@@ -1754,6 +1754,9 @@ Ismail</a>.</p>
 </div>
 <div id="open-positions" class="section level1">
 <h1>Open positions</h1>
+<p>Please see information for
+<a href="https://research.cs.nuim.ie/Postgraduate/" target="_blank">propective
+and current research postgraduates</a>.</p>
 <p>Below examples of (competitive) funding available for prospective
 research students and research fellows:</p>
 <ul>
