--- a/index.html
+++ b/index.html
@@ -1456,7 +1456,13 @@ margin-left: 0 !important;
         </ul>
         <nav role="navigation" id="toc">
           <ul>
-          <li><a href="#welcome" id="toc-welcome">Welcome</a></li>
+          <li><a href="#welcome" id="toc-welcome">Welcome</a>
+          <ul>
+          <li><a href="#research-areas" id="toc-research-areas">Research
+          areas</a></li>
+          <li><a href="#information-for-students" id="toc-information-for-students">Information for
+          students</a></li>
+          </ul></li>
           <li><a href="#academic-staff-expertise" id="toc-academic-staff-expertise">Academic Staff Expertise</a>
           <ul>
           <li><a href="#research-groups" id="toc-research-groups">Research Groups</a></li>
@@ -1472,7 +1478,7 @@ margin-left: 0 !important;
                                 <li><span><i class="glyphicon glyphicon-user"></i> Prof. Rozenn
 Dahyot</span></li>
                                          <li><span><i class="glyphicon glyphicon-calendar"></i> Updated:
-21 February, 2024</span></li>
+05 March, 2024</span></li>
                   </ul>     
       </div>
       <div class="book-body fixed">
@@ -1506,6 +1512,8 @@ Universities of
 of Ireland (NUI)</a> that is the <strong>best University for Computer
 Science in Ireland in 2023</strong> according to
 <a href="https://research.com/university-rankings/computer-science/ie" target="_blank">research.com</a>.</p>
+<div id="research-areas" class="section level2">
+<h2>Research areas</h2>
 <p>Our research themes and applications are:</p>
 <ul>
 <li>Artificial Intelligence (inc. machine learning, Deep Neural
@@ -1529,6 +1537,14 @@ research centres.</p></li>
 <strong><a href="https://scholar.google.com/citations?hl=en&amp;user=Fax186kAAAAJ&amp;view_op=list_works&amp;sortby=pubdate" target="_blank">departmental
 Google Scholar Webpage</a></strong> lists our publications.</p></li>
 </ul>
+</div>
+<div id="information-for-students" class="section level2">
+<h2>Information for students</h2>
+<p>The information page for prospective and current research
+postgraduate students is
+<strong><a href="https://research.cs.nuim.ie/Postgraduate/" target="_blank">available
+here</a></strong>.</p>
+</div>
 </div>
 <div id="academic-staff-expertise" class="section level1">
 <h1>Academic Staff Expertise</h1>
@@ -1754,9 +1770,6 @@ Ismail</a>.</p>
 </div>
 <div id="open-positions" class="section level1">
 <h1>Open positions</h1>
-<p>Please see information for
-<a href="https://research.cs.nuim.ie/Postgraduate/" target="_blank">propective
-and current research postgraduates</a>.</p>
 <p>Below examples of (competitive) funding available for prospective
 research students and research fellows:</p>
 <ul>
