--- a/index.html
+++ b/index.html
@@ -1512,7 +1512,7 @@ Universities of
 of Ireland (NUI)</a> that is the <strong>best University for Computer
 Science in Ireland in 2023</strong> according to
 <a href="https://research.com/university-rankings/computer-science/ie" target="_blank">research.com</a>.</p>
-<p><strong>News MU Computer Science Education activity</strong>
+<p><strong>News: MU Computer Science Education activity</strong>
 <a href="https://research.cs.nuim.ie/CS-Education/" target="_blank">https://research.cs.nuim.ie/CS-Education/</a></p>
 <div id="research-areas" class="section level2">
 <h2>Research areas</h2>
