--- a/Slides/index.html
+++ b/Slides/index.html
@@ -317,9 +317,11 @@ Research interests:
 <div class="column" style="width:60%;">
 <p>Research interests:</p>
 <ul>
-<li>Neural Networks &amp; Machine Learning, Novel Architectures, Safety</li>
-<li>Automatic Differentiation, Functional Programming, Programming Languages for Adaptive Computing</li>
-<li>Theoretical Neurobiology: Optimality, Sensory Processing, Criticality, Sleep</li>
+<li>Computational Neuroscience</li>
+<li>Theoretical Neurobiology</li>
+<li>Machine Learning</li>
+<li>Recurrent Neural Networks</li>
+<li>Automatic Differentiation</li>
 </ul>
 </div><div class="column" style="width:40%;">
 <p><img data-src="https://www.maynoothuniversity.ie/sites/default/files/styles/ratio_2_3/public/assets/images/Barak%20Pearlmutter%20web.jpg" class="absolute" style="top: 150px; left: 600px; width: 40%; "></p>
