--- a/Slides/index.html
+++ b/Slides/index.html
@@ -324,7 +324,7 @@ Research interests:
 <li>Automatic Differentiation</li>
 </ul>
 </div><div class="column" style="width:40%;">
-<p><img data-src="https://www.maynoothuniversity.ie/sites/default/files/styles/ratio_2_3/public/assets/images/Barak%20Pearlmutter%20web.jpg" class="absolute" style="top: 150px; left: 600px; width: 40%; "></p>
+<p><img data-src="https://www.maynoothuniversity.ie/sites/default/files/styles/ratio_2_3/public/assets/images/Barak%20Pearlmutter%20Web.jpg" class="absolute" style="top: 150px; left: 600px; width: 40%; "></p>
 </div></div>
 </section>
 <section id="peter-mooney" class="slide level2">
